Adicionado uma nova lista.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <ul>
         <li class="list">Add visual styles.</li>
         <li class="list">Add light and dark themes.</li>
+        <li class="list">Add to github this example.</li>
         <li>Enable switching the theme.</li>
     </ul>
     <div>
